--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/mabey01/stormy-butter",
   "dependencies": {
     "express": "^4.12.3",
-    "mongodb": "^2.0.28"
+    "formidable": "^1.0.17",
+    "mongodb": "^2.0.28",
+    "q": "^1.3.0"
   }
 }
