--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stormy-butter",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "backend for brainstorm tool",
   "main": "src/index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "express": "^4.12.3",
     "formidable": "^1.0.17",
     "mongodb": "^2.0.28",
-    "q": "^1.3.0"
+    "q": "^1.3.0",
+    "socket.io": "^1.3.5"
   }
 }
